Cleaned up index file

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 </head>
 <body>
 
-	<h1>Don't test me!</h1>
-
 	<div id="container"></div>
 
-	<table id="feedbackTable">
+<!-- 	<table id="feedbackTable">
 		<thead>
 			<tr>
 				<th>client.X</th>
@@ -45,7 +43,7 @@
 			</tr>
 		</tbody>
 	</table>
-
+ -->
 <!-- 	<svg width="100" height="100">
 		<circle id="foo" cx="50" cy="50" r="40" stroke-width="4" fill="yellow">
 			<animate attributeName="cy" from="50" to="200" dur="3s"/>
