--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript" src="util.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	
-	<title>WATERFALL</title>
+	<title>ORBITALS!</title>
 </head>
 <body>
 
