I had mass related linearly to radius. Mon Dieu!
Also added momentum to collisions (angle is not yet present) took out
the magic numbers of size an ditme for creating planets and created a
feedback system.

--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
 
 	<div id="container"></div>
 
+	<div id='feedback'>
+		<table>
+			<thead>
+				<tr>
+					<th>Distance</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr><td></td></tr>
+			</tbody>
+		</table>
+	</div>
+
 </body>
 </html>
