Took out some more unnecessary code, changed colors.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 	<div id="container"></div>
 
-	<div id='feedback'>
+	<!-- A table for numerical feedback if necesary -->
+	<!-- <div id='feedback'>
 		<table>
 			<thead>
 				<tr>
@@ -29,7 +30,7 @@
 				<tr><td></td></tr>
 			</tbody>
 		</table>
-	</div>
+	</div> -->
 
 </body>
 </html>
