--- a/index.html
+++ b/index.html
@@ -32,5 +32,47 @@
 		</table>
 	</div> -->
 
+	<script>
+		$(function(){
+			paper = new Raphael('container', '100%', '100%'); 
+				
+			$(paper.canvas).on({
+				// mousemove: function(e){
+				// 	var feedback = [
+				// 		e.clientX,  e.clientY,
+				// 		e.pageX,    e.pageY,
+				// 		e.screenX,  e.screenY,
+				// 		e.offsetX,  e.offsetY];
+
+				// 	$('#feedbackTable td').each(function(i,e){
+				// 		$(this).text(feedback[i]);
+				// 	});
+				// },
+				mousedown: function(e){
+					stopLoop();
+					create_planet(e);
+				}
+			});
+
+			$('body').on('keypress', function(e){
+				if (e.which == 32) {  // Spacebar
+					if (looping) stopLoop();
+					else loop();
+				}
+				if (e.which == 99) { // Clear on 'c'
+					Planets.forEach(function(planet){
+						planet.circle.remove();
+					});
+					Planets.length = 0;
+				}
+			});
+
+			window.onresize = function(e) {
+				windowWidth  = $(window).width();
+				windowHeight = $(window).height();
+			}
+		});
+	</script>
+
 </body>
 </html>
