--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="container"></div>
 
 	<!-- JS Libraries -->
-	<script type="text/javascript" src="jquery.js"></script>
+	<script type="text/javascript" src="jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="raphael.js"></script>
 
 	<!-- Scripts -->
