Changed the file structure to help with the growing number of libraries

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	<div id="container"></div>
 
 	<!-- JS Libraries -->
-	<script type="text/javascript" src="jquery-2.0.3.min.js"></script>
-	<script type="text/javascript" src="raphael.js"></script>
+	<script type="text/javascript" src="includes/jquery-2.0.3.min.js"></script>
+	<script type="text/javascript" src="includes/raphael.js"></script>
 
 	<!-- Scripts -->
-	<script type="text/javascript" src="vector.js"></script>
-	<script type="text/javascript" src="PLANEMATOR.js"></script>
-	<script type="text/javascript" src="planet.js"></script>
+	<script type="text/javascript" src="js/vector.js"></script>
+	<script type="text/javascript" src="js/PLANEMATOR.js"></script>
+	<script type="text/javascript" src="js/planet.js"></script>
 	<script>
 		$(function(){
 			$(PLANEMATOR.paper.canvas).on({
