Try big bang simulator

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         windowHeight = $(window).height();
       }
       // Now that planet creation no longer stops and starts looping, initialize it here.
-      PLANEMATOR.seed();
+      PLANEMATOR.seed(1);
       PLANEMATOR.loop();
     });
   </script>
